Update search -> search/spotify
