# functions/src/routes/search/index.ts
@@ -1,13 +1,34 @@
 import {Router} from 'express';
 import {spotify} from '../../config/spotify';
-import loginRequire from '../../middleware/loginRequire';
 
 const router = Router();
 
-router.get('/', loginRequire, async (req, res, next) => {
+router.get('/spotify', async (req, res, next) => {
   try {
     const {q}: any = req.query;
+    // client access_token
+    const {
+      body: {access_token},
+    } = await spotify.clientCredentialsGrant();
+    spotify.setAccessToken(access_token);
     const {body, statusCode} = await spotify.searchTracks(q, {limit: 15});
+
+    res.status(statusCode).json(body);
+  } catch (error) {
+    next(error);
+  }
+});
+
+router.get('/apple', async (req, res, next) => {
+  try {
+    const {q}: any = req.query;
+    // client access_token
+    const {
+      body: {access_token},
+    } = await spotify.clientCredentialsGrant();
+    spotify.setAccessToken(access_token);
+    const {body, statusCode} = await spotify.searchTracks(q, {limit: 15});
+
     res.status(statusCode).json(body);
   } catch (error) {
     next(error);
